Fixing the navigation items so that they match up with Bootstrap's css.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,10 +27,10 @@
             <header class="subhead">
 
                 <div class="subnav pull-right">
-                    <ul>
-                        <li><a href="#">Item 1</a></li>
-                        <li><a href="#">Item 2</a></li>
-                        <li><a href="#">Item 3</a></li>
+                    <ul class="nav nav-pills">
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Code</a></li>
+                        <li><a href="#">Resume</a></li>
                     </ul>
                 </div>
 
