--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
 
                 <div class="subnav pull-right">
                     <ul class="nav nav-pills">
+                        <li><a href="/">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Code</a></li>
                         <li><a href="#">Resume</a></li>
