Updating the footer with non-descript Copyright information.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
 
                 <small class="pull-right">Lovingly Concocted by <a href="http://jekyllrb.com/">Jekyll</a></small>
 
-                <small>Copyright &copy; <a href="http://joshbranchaud.com">Josh Branchaud</a> <time datetime="2013">2013</time></small>
+                <small>Copyright &copy; <a href="#">Dr Henry Jekyll</a> <time datetime="2013">2013</time></small>
 
             </footer>
 
